version 0.9.1+
	* More flexible mapreduce()/map() functions
	* Make TaskGenerator pickle()able and hash()able

version 0.9.1 Mon Jun 11 2012 by luispedro
	* Add --locks-only option to cleanup subcommand
	* Make cache file (for `status` subcommand) configurable
	* Add `webstatus` subcommand
	* Add bvalue() function
	* Fix bug in `shell` subcommand (`value` was not in global namespace)
	* Improve identity()
	* Fix bug in using Tasklets and --aggressive-unload
	* Fix bug with Tasklets and sleep-until/check

version 0.9 Mon Dec 5 2011 by luispedro
	* In the presence of a barrier(), rerun the jugfile
	* Add set_jugdir to public API
	* Added CompoundTaskGenerator
	* Support subclassing of Task
	* Avoid creating directories in file backend unless it is necessary
	* Add jug.mapreduce.reduce (which mimicks the builtin reduce)

version 0.8.1 Tue Jul 5 2011 by luispedro
	* Fix redis backend for new version of client module
	* Faster file store for large files
	* Fix `invalidate` with Tasklets
	* Install tests and have them be runnable
	* Changed hash computation method. This has a special case on numpy arrays
	(for speed) and is more extensible through a __jug_hash__ hook
	* Fix bug with Tasklet dependencies not being properly taken into account
	* Fix shell subcommand in newer versions of ipython
	* Add __file__ attribute to fake jugmodule

version 0.8 Sun Mar 27 2011 by luispedro
	* Tasklets
	* Fix bug in sleep-until
	* Fix bug in cleanup
	* Fix bug in status with --cache options (was non functional)
	* Fix bug in CompoundTask (you needed to run jug execute twice before)

version 0.7.4 Sun Jan 16 2011 by luispedro
	* Fix case where ~/.jug/configrc does not exist
	* Print host name to lock file on file_store
	* Refactored implementation of options
	* Fix unloading tasks that have not run
	* Fix mapreduce for empty input

version 0.7.3 Tue Jan 4 2011 by luispedro
	* Parse ~/.jug/configrc
	* Fix bug with waiting times
	* Special case saving of numpy arrays